k8s/setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thetrains

---
apiVersion: v1
kind: Service
metadata:
  name: dash
  namespace: thetrains
  labels:
    app: dash
spec:
  selector:
    app: dash
  ports:
    - name: http
      port: 80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash
  namespace: thetrains
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Can comment this out for no certificates
spec:
  tls:
    - hosts:
        - <example>
      secretName: dash-tls
  rules:
    - host: <example>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dash
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: thetrains
  labels:
    app: mongo
spec:
  type: NodePort
  ports:
    - port: 27017
  selector:
    app: mongo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: thetrains
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: mongo-volume
              mountPath: /data/db
      volumes:
        - name: mongo-volume
          persistentVolumeClaim:
            claimName: mongo-pvc
